# MQTT-temp-humi

Project_1/: .gitmodules
Project_1/GateWay/: CMakeLists.txt  sdkconfig  sdkconfig.old
Project_1/GateWay/Libs/DHT/: dht.c  dht.h
Project_1/GateWay/Libs/MQTT/: CMakeLists.txt  mqtt_client_tcp.c  mqtt_client_tcp.h
Project_1/GateWay/Libs/RTC/: CMakelists.txt
Project_1/GateWay/Libs/WIFI/: CMakeLists.txt  wifi.c  wifi.h
Project_1/GateWay/components/lv_examples/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.c
Project_1/GateWay/components/lvgl_esp32_driver/: CMakeLists.txt  lv_drv_conf.h  lvgl_helpers.c  lvgl_helpers.h
Project_1/GateWay/components/lvgl_esp32_driver/lvgl_tft/: CMakeLists.txt  Kconfig  disp_driver.c  disp_driver.h  disp_spi.h  ili9341.c  ssd1963.c  ssd1963.h
Project_1/GateWay/components/lvgl_esp32_driver/lvgl_touch/: CMakeLists.txt  touch_driver.c  xpt2046.c  xpt2046.h
Project_1/GateWay/main/: CMakeLists.txt  main.c
